package src.Modes;

public interface Mode {
    void run();
}